# dynamic_scoliosis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
config/: .gitkeep
docs/: .gitkeep  CONTRIBUTING.md  EMERGENCY_SCENARIOS.md  SECURITY.md  USER_GUIDE.md
examples/: .gitkeep  patient_config.json  practitioner_config.json
src/dynamic_scoliosis_credentials/: __init__.py  cli.py  generator.py  models.py  qr_generator.py  utils.py
templates/: .gitkeep
tests/: __init__.py  conftest.py  test_generator.py  test_models.py  test_qr_generator.py
